[gd_scene load_steps=10 format=3 uid="uid://g5hfoeklt4g1"]

[ext_resource type="Script" path="res://scripts/pickups/chest.gd" id="1_oc3qr"]
[ext_resource type="Texture2D" uid="uid://bg4nmpnf348rn" path="res://assets/16x16 Assorted RPG Icons/chests.png" id="2_1noaq"]
[ext_resource type="FontFile" uid="uid://dj68f2ekgi03i" path="res://assets/Fonts/PixelOperator8-Bold.ttf" id="3_gi6q4"]
[ext_resource type="AudioStream" uid="uid://dnxnkd6ymcvtg" path="res://assets/Audios/CannonShoot.wav" id="4_47voh"]
[ext_resource type="AudioStream" uid="uid://bkbbtse858d2x" path="res://assets/Audios/crate-break-1-93926.mp3" id="5_owqwr"]
[ext_resource type="Texture2D" uid="uid://bqi1quc2f0tx1" path="res://assets/SpriteSheet.png" id="6_iwbng"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oii8l"]
radius = 28.0

[sub_resource type="Gradient" id="Gradient_3v2ag"]
offsets = PackedFloat32Array(0.016129032, 0.8064516, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yue2o"]
gradient = SubResource("Gradient_3v2ag")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.517094, 0.52136755)
fill_to = Vector2(0.76495725, 0.7777778)

[node name="GoldChest" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_oc3qr")
chest_type = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1noaq")
region_enabled = true
region_rect = Rect2(80, 81, 16, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oii8l")

[node name="InteractPrompt" type="Label" parent="."]
offset_left = -16.0
offset_top = -24.0
offset_right = 64.0
offset_bottom = 11.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.1882353)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_gi6q4")
text = "PRESS
\"E\""
horizontal_alignment = 1

[node name="SFX_Spawn" type="AudioStreamPlayer2D" parent="."]
position = Vector2(89, -18)
stream = ExtResource("4_47voh")
pitch_scale = 0.5
bus = &"SFX"

[node name="SFX_Despawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_owqwr")
bus = &"SFX"

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.515625, 0.46875)
color = Color(1, 0.843, 0, 1)
energy = 1.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_yue2o")
texture_scale = 0.5

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.11764706)
z_index = -1
position = Vector2(0, 6.9999995)
scale = Vector2(1.6666666, 0.975)
texture = ExtResource("6_iwbng")
region_enabled = true
region_rect = Rect2(201.99591, 204.99461, 12.041901, 5.0242004)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
